--- a/index.html
+++ b/index.html
@@ -69,28 +69,29 @@
       </div>
     </nav>
 
-    <div class="content">
-      <div class="part1">
-        <img
-          src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885__480.jpg"
-          class="img-fluid"
-          alt="Background Image"
-        />
-      </div>
-      <div class="part2">
-        <div class="text-container">
-          <h1 class="animated-text">Veerappa B Pagi</h1>
-        </div>
-        <h5>
-          Welcome to the professional portfolio of Dr. Veerappa B Pagi, a
-          dedicated and passionate lecturer in the Department of Computer
-          Science and Engineering. With over 25+ years of experience in
-          academia, Dr. Veerappa B Pagi is committed to advancing the field of
-          computer science through innovative teaching, groundbreaking research,
-          and active engagement with the academic community.
-        </h5>
-      </div>
+<div class="content">
+  <div class="part1">
+    <img
+      src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885__480.jpg"
+      class="img-fluid"
+      alt="Background Image"
+    />
+  </div>
+  <div class="part2">
+    <div class="text-container">
+      <h1 class="animated-text">Veerappa B Pagi</h1>
     </div>
+    <h5 class="description">
+      Welcome to the professional portfolio of Dr. Veerappa B Pagi, a dedicated
+      and passionate lecturer in the Department of Computer Science and
+      Engineering. With over 25+ years of experience in academia, Dr. Veerappa B
+      Pagi is committed to advancing the field of computer science through
+      innovative teaching, groundbreaking research, and active engagement with
+      the academic community.
+    </h5>
+  </div>
+</div>
+
     <footer class="foot">
       <div class="fo">
         <h1 style="color: aliceblue">Contact me on</h1>
